# smath

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: smath.h
include/algebra/: matrix.h  matrix2.h  matrix3.h  vector.h  vector2.h  vector3.h
include/linear-algebra/: complex.h  constants.h  linear-algebra.h  matrix2.h  matrix3.h  matrix4.h  vector2.h  vector3.h  vector4.h
include/statistics/: statistics.h
src/: algebra.hpp
src/algebra/: matrix.cpp  matrix2.cpp  matrix3.cpp  vector.cpp  vector2.cpp  vector3.cpp
src/linear-algebra/: matrix2.cpp  matrix3.cpp  matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
test/algebra/: main
test/linear-algebra/: test  test.cpp
